Fix floating image percent sizes on mobile

--- a/theme.css
+++ b/theme.css
@@ -1630,7 +1630,7 @@ img[src^="http"][alt~="right"] {
 
 /* Floats */
 .markdown-reading-view .image-embed[src~="float"] > img:not([width]) {
-    width: calc(var(--img-width, 100) / 100 * var(--file-line-width));
+    width: calc(var(--img-width, 100) / 100 * min(100vw, var(--file-line-width)));
     margin: 0 !important;
 }
 .markdown-reading-view .image-embed[src~="float"] {
@@ -1685,10 +1685,10 @@ body:not(.no-image-alttext-caption) .image-embed:not([alt*=".png"], [alt*=".gif"
     text-align: center;
 }
 body:not(.no-image-alttext-caption) .image-embed:not([alt*=".png"], [alt*=".gif"], [alt*=".jpg"], [alt*=".jpeg"], [alt*=".tiff"], [alt*=".avif"], [alt*=".webp"], [alt="inline"], [width])::after {
-    width: calc(var(--img-width, 100) / 100 * min(100%, var(--file-line-width)));
+    width: calc(var(--img-width, 100) / 100 * min(100vw, var(--file-line-width)));
 }
 body:not(.no-image-alttext-caption) .markdown-reading-view .image-embed[src~="float"]:not([alt*=".png"], [alt*=".gif"], [alt*=".jpg"], [alt*=".jpeg"], [alt*=".tiff"], [alt*=".avif"], [alt*=".webp"], [alt="inline"], [width])::after {
-    width: calc(var(--img-width, 100) / 100 * var(--file-line-width));
+    width: calc(var(--img-width, 100) / 100 * min(100vw, var(--file-line-width)));
 }
 body:not(.no-image-alttext-caption) .image-embed:not([alt*=".png"], [alt*=".gif"], [alt*=".jpg"], [alt*=".jpeg"], [alt*=".tiff"], [alt*=".avif"], [alt*=".webp"], [alt="inline"], [width])[src~="left"]::after {
     margin-inline: 0 auto;
